Jann 30/objects/ProfitCenter__c.object
<CustomObject>
    <description>RFA R1 - Stores the Profit Center Hierarchy within the RFA Application. Profit Centers will also be referenced on specific RFAs.</description>
    <fields>
        <fullName>AbbrGroupName__c</fullName>
        <label>Abbr Group Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActiveInactive__c</fullName>
        <label>Active/Inactive</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Unit_Name__c</fullName>
        <label>Business Unit Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupName__c</fullName>
        <label>Group Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KeyOperationName__c</fullName>
        <label>Key Operation Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MinLevel__c</fullName>
        <label>Min Level</label>
        <picklist>
            <picklistValues>
                <fullName>1. Key Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Business Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Senior Executive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NeedRecalculation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for recalculation of sharing model</description>
        <label>Need Recalculation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <formula>RFA_Business_Units__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProfitCenterName__c</fullName>
        <label>Profit Center Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profit_Center_Type__c</fullName>
        <label>Profit Center Type_old</label>
        <picklist>
            <picklistValues>
                <fullName>CCNA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RFA_Business_Units__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RFA Business Units</label>
        <referenceTo>RFA_Business_Unit__c</referenceTo>
        <relationshipLabel>Profit Centers</relationshipLabel>
        <relationshipName>Profit_Centers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Profit Center</label>
    <listViews>
        <fullName>All_Active</fullName>
        <columns>NAME</columns>
        <columns>ProfitCenterName__c</columns>
        <columns>GroupName__c</columns>
        <columns>AbbrGroupName__c</columns>
        <columns>Business_Unit_Name__c</columns>
        <columns>KeyOperationName__c</columns>
        <columns>NeedRecalculation__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ActiveInactive__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All - Active</label>
    </listViews>
    <listViews>
        <fullName>All_Inactive</fullName>
        <columns>NAME</columns>
        <columns>ProfitCenterName__c</columns>
        <columns>GroupName__c</columns>
        <columns>Profit_Center_Type__c</columns>
        <columns>AbbrGroupName__c</columns>
        <columns>Business_Unit_Name__c</columns>
        <columns>KeyOperationName__c</columns>
        <columns>ActiveInactive__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ActiveInactive__c</field>
            <operation>equals</operation>
            <value>Inactive</value>
        </filters>
        <label>All - Inactive</label>
    </listViews>
    <nameField>
        <label>Profit Center Number</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01Id00000016kuSEAQ_00Nd000000594cmEAA</fullName>
        <active>true</active>
        <booleanFilter>1 AND 2</booleanFilter>
        <errorMessage>You may only select Active Profit Centers and the Profit Center must have a Location Coordinator assigned to it. Contact the appropriate Location Coordinator if you cannot find a particular Profit Center.</errorMessage>
        <field>RFA__c.ProfitCenterNumber__c</field>
        <filterItems>
            <field>ProfitCenter__c.ActiveInactive__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <filterItems>
            <field>ProfitCenter__c.MinLevel__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <infoMessage>To search for a Profit Center (PC) enter any known information included in the PC #  (eg). if your PC # starts with CN enter &quot;CN*&quot; and click Go.  Click Show Filters below for additional filter and search. Or go to the PC tab to look up your PC #.</infoMessage>
        <isOptional>false</isOptional>
        <name>RFA_Profit Center</name>
    </namedFilters>
    <pluralLabel>Profit Centers</pluralLabel>
    <recordTypes>
        <fullName>Corporate_CCNA</fullName>
        <active>true</active>
        <description>Profit Center for CCNA</description>
        <label>Corporate (CCNA)</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>